ui/fail/value/double_ref.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/double_ref.rs:9:17
   |
9  |         let r = &a;
   |                 ^^ borrowed value does not live long enough
...
12 |     }
   |     - `a` dropped here while still borrowed
...
15 |     do_stuff(invalid);
   |              ------- borrow later used here

error[E0597]: `r` does not live long enough
  --> $DIR/double_ref.rs:10:31
   |
10 |         let val = Value::from(&r);
   |                               ^^ borrowed value does not live long enough
11 |         invalid = *val.borrow::<&&i32>();
12 |     }
   |     - `r` dropped here while still borrowed
...
15 |     do_stuff(invalid);
   |              ------- borrow later used here

error[E0597]: `val` does not live long enough
  --> $DIR/double_ref.rs:11:20
   |
11 |         invalid = *val.borrow::<&&i32>();
   |                    ^^^ borrowed value does not live long enough
12 |     }
   |     - `val` dropped here while still borrowed
...
15 |     do_stuff(invalid);
   |              ------- borrow later used here
